--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,27 @@
 [submodule "lib/ui--server"]
 	path = lib/ui--server
 	url = git@github.com:rappstack/ui--server.git
+[submodule "lib/persontric-adapter-test"]
+	path = lib/persontric-adapter-test
+	url = git@github.com:persontric/adapter-test.git
+[submodule "lib/persontric-adapter-sqlite"]
+	path = lib/persontric-adapter-sqlite
+	url = git@github.com:persontric/adapter-sqlite.git
+[submodule "lib/persontric-adapter-drizzle"]
+	path = lib/persontric-adapter-drizzle
+	url = git@github.com:persontric/adapter-drizzle.git
+[submodule "lib/persontric"]
+	path = lib/persontric
+	url = git@github.com:persontric/persontric.git
+[submodule "lib/persontric-adapter-mongodb"]
+	path = lib/persontric-adapter-mongodb
+	url = git@github.com:persontric/adapter-mongodb.git
+[submodule "lib/persontric-adapter-mysql"]
+	path = lib/persontric-adapter-mysql
+	url = git@github.com:persontric/adapter-mysql.git
+[submodule "lib/persontric-adapter-postgresql"]
+	path = lib/persontric-adapter-postgresql
+	url = git@github.com:persontric/adapter-postgresql.git
+[submodule "lib/persontric-adapter-prisma"]
+	path = lib/persontric-adapter-prisma
+	url = git@github.com:persontric/adapter-prisma.git
