--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "app/.github.git"]
 	path = app/.github.git
 	url = git@github.com:rappstack/.github.git
+[submodule "lib/dev-bin"]
+	path = lib/dev-bin
+	url = git@github.com:btakita/dev-bin.git
 [submodule "lib/domain--any--blog"]
 	path = lib/domain--any--blog
 	url = git@github.com:rappstack/domain--any--blog.git
@@ -22,33 +25,12 @@
 [submodule "lib/domain--server--youtube"]
 	path = lib/domain--server--youtube
 	url = git@github.com:rappstack/domain--server--youtube.git
-[submodule "lib/ui--any"]
-	path = lib/ui--any
-	url = git@github.com:rappstack/ui--any.git
-[submodule "lib/ui--any--blog"]
-	path = lib/ui--any--blog
-	url = git@github.com:rappstack/ui--any--blog.git
-[submodule "lib/ui--browser--blog"]
-	path = lib/ui--browser--blog
-	url = git@github.com:rappstack/ui--browser--blog.git
-[submodule "lib/ui--server--blog"]
-	path = lib/ui--server--blog
-	url = git@github.com:rappstack/ui--server--blog.git
-[submodule "lib/ui--server"]
-	path = lib/ui--server
-	url = git@github.com:rappstack/ui--server.git
-[submodule "lib/persontric-adapter-test"]
-	path = lib/persontric-adapter-test
-	url = git@github.com:persontric/adapter-test.git
-[submodule "lib/persontric-adapter-sqlite"]
-	path = lib/persontric-adapter-sqlite
-	url = git@github.com:persontric/adapter-sqlite.git
-[submodule "lib/persontric-adapter-drizzle"]
-	path = lib/persontric-adapter-drizzle
-	url = git@github.com:persontric/adapter-drizzle.git
 [submodule "lib/persontric"]
 	path = lib/persontric
 	url = git@github.com:persontric/persontric.git
+[submodule "lib/persontric-adapter-drizzle"]
+	path = lib/persontric-adapter-drizzle
+	url = git@github.com:persontric/adapter-drizzle.git
 [submodule "lib/persontric-adapter-mongodb"]
 	path = lib/persontric-adapter-mongodb
 	url = git@github.com:persontric/adapter-mongodb.git
@@ -61,6 +43,27 @@
 [submodule "lib/persontric-adapter-prisma"]
 	path = lib/persontric-adapter-prisma
 	url = git@github.com:persontric/adapter-prisma.git
-[submodule "lib/dev-bin"]
-	path = lib/dev-bin
-	url = git@github.com:btakita/dev-bin.git
+[submodule "lib/persontric-adapter-sqlite"]
+	path = lib/persontric-adapter-sqlite
+	url = git@github.com:persontric/adapter-sqlite.git
+[submodule "lib/persontric-adapter-test"]
+	path = lib/persontric-adapter-test
+	url = git@github.com:persontric/adapter-test.git
+[submodule "lib/snippet--rappstack"]
+	path = lib/snippet--rappstack
+	url = git@github.com:btakita/snippet--rappstack.git
+[submodule "lib/ui--any"]
+	path = lib/ui--any
+	url = git@github.com:rappstack/ui--any.git
+[submodule "lib/ui--any--blog"]
+	path = lib/ui--any--blog
+	url = git@github.com:rappstack/ui--any--blog.git
+[submodule "lib/ui--browser--blog"]
+	path = lib/ui--browser--blog
+	url = git@github.com:rappstack/ui--browser--blog.git
+[submodule "lib/ui--server"]
+	path = lib/ui--server
+	url = git@github.com:rappstack/ui--server.git
+[submodule "lib/ui--server--blog"]
+	path = lib/ui--server--blog
+	url = git@github.com:rappstack/ui--server--blog.git
