--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "lib/ui--server--blog"]
 	path = lib/ui--server--blog
 	url = git@github.com:rappstack/ui--server--blog.git
+[submodule "lib/ui--browser--semantic"]
+	path = lib/ui--browser--semantic
+	url = git@github.com:rappstack/ui--browser--semantic.git
